themedir =  $(datadir)/icons/HighContrast-SVG
size = scalable
context = apps

icondir = $(themedir)/$(size)/$(context)

icon_DATA = \
	bug-buddy.svg	\
	internet-group-chat.svg \
	internet-mail.svg \
	internet-news-reader.svg \
	internet-web-browser.svg \
	firefox-icon.svg \
	glchess.svg	\
	orca.svg \
	pidgin.svg \
	thunderbird-icon.svg \
	preferences-system-network-proxy.svg \
	preferences-system-session.svg \
	preferences-system-windows.svg \
	rhythmbox.svg \
	tomboy.svg \
	totem.svg

EXTRA_DIST = \
	$(icon_DATA)
