themedir =  $(datadir)/icons/HighContrast-SVG
size = scalable
context = apps

icondir = $(themedir)/$(size)/$(context)

icon_DATA = \
	brasero.svg \
	bug-buddy.svg	\
	internet-group-chat.svg \
	internet-mail.svg \
	internet-news-reader.svg \
	internet-web-browser.svg \
	glchess.svg	\
	orca.svg \
	preferences-system-network-proxy.svg \
	preferences-system-session.svg \
	preferences-system-windows.svg \
	rhythmbox.svg \
	sound-juicer.svg \
	tomboy.svg \
	totem.svg

EXTRA_DIST = \
	$(icon_DATA)
